[gd_scene load_steps=10 format=3 uid="uid://bcttf33jblp1u"]

[ext_resource type="Texture2D" uid="uid://c1huniiwim45e" path="res://assets/sprites/characters/knight_battler.png" id="1_hkndd"]
[ext_resource type="Script" path="res://src/characters/knight_battler.gd" id="1_wym1h"]
[ext_resource type="Resource" uid="uid://5510sou3p5cq" path="res://resources/battlers/basic_knight.tres" id="2_658pt"]

[sub_resource type="Animation" id="Animation_1vcsm"]
resource_name = "Attack"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_igrhv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mc3wx"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4n1fd"]
_data = {
"Attack": SubResource("Animation_1vcsm"),
"RESET": SubResource("Animation_igrhv"),
"Walk": SubResource("Animation_mc3wx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtgvj"]
size = Vector2(9, 17)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1la3k"]
height = 20.0

[node name="KnightBattler" type="CharacterBody2D"]
script = ExtResource("1_wym1h")
battler_resource = ExtResource("2_658pt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_hkndd")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4n1fd")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_wtgvj")

[node name="FightingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightingArea"]
position = Vector2(-11, 0)
shape = SubResource("CapsuleShape2D_1la3k")

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="FightingArea" to="." method="_on_fighting_area_body_entered"]
[connection signal="body_exited" from="FightingArea" to="." method="_on_fighting_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
